fix margin overflow. Add animation to icons (which are bigger) and project cards

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,10 @@ body, html {
 
 .portfolio-section {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 4%;
 }
 
 .content-wrapper {
