--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,18 +1,15 @@
 body, html {
   margin: 0;
   padding: 0;
-  height: 100%;
   font-family: 'Arial', sans-serif;
   background-color: #ffffff;
 }
 
 .portfolio-section {
-  position: relative;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 4%;
+  height: 100vh;
 }
 
 .content-wrapper {
@@ -142,4 +139,19 @@ body, html {
 .social-icons.visible {
   opacity: 1;
   visibility: visible;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
 }
